<resources>
    <string name="app_name">Messenger</string>

    <string name="login_header">Login to Your account</string>
    <string name="login_btn">Generate code</string>
    <string name="login_hint">Please enter your Phone number for verification</string>
    <string name="login_phone_hint">Phone Number</string>

    <string name="verification_header">Enter Code</string>
    <string name="verification_hint">We have sent you an Code for verification</string>
    <string name="verification_code_hint">Your code</string>
    <string name="verification_btn">Verify</string>

    <string name="logout_btn">Logout</string>
    <string name="hint_enter_number">Please enter Your phone number</string>
    <string name="hint_try_again">Please try again</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="title_chats">Chats</string>
    <string name="title_calls">Calls</string>
    <string name="title_account">Account</string>

    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="status">Status</string>
    <string name="link">Link</string>
<!-- dialog fill profile-->
    <string name="fill_profile">Please fill Profile</string>
    <string name="save">Save</string>
    <string name="remind_me_later">Remind me later</string>
</resources>